@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div style="width:220px;">Bypass Paywalls v1.2.4 by Adam
+<div style="width:220px;">Bypass Paywalls v1.2.5 by Adam
 <br><a href="options.html">Options</a></div>
 </body>
 </html>
